<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, LocationFinderAndroidActivity!</string>
    <string name="app_name">LocationFinderAndroid</string>
	<string name="radius_label">Radius: </string>
	<string name="radius_meter_label">M</string>
	<string name="category_label">Category: </string>
	<string name="search_button_label">Search</string>
	<string name="exit_button_label">Exit</string>
	<string name="latitude_label">Lat: </string>
	<string name="longitude_label">Lng: </string>
	<string name="locality_label">Locality: </string>
	<string name="location_dialog_label">Restaurant</string>
	
	    <string name="reverse_geocode_url"></string>
	
	<string name="search_title">Search Location</string> 
	<string name="search_greeting">Hello, this is search</string>
	
	<string name="map_api_key">0foGVbmrZxEiFkujcsiXP77fgQc4GLpucy1tHZw</string>
	<string name="default_latitute">25.037977</string>
	<string name="default_longitude">121.548829</string>
	<string name="map_zoom_level">15</string>
</resources>