<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:orientation="vertical">
    <TextView
        android:text="@string/search_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TableLayout 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:gravity="left">
        <TableRow>
    		<TextView
        		android:id="@+id/radius_text"
        		android:paddingRight="3dip"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content" />
    		<TextView
        		android:id="@+id/latitude_label"
        		android:text="@string/latitude_label"
        		android:paddingRight="3dip"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content" />
    		<TextView
        		android:id="@+id/latitude_text"
        		android:paddingRight="3dip"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content" />
    		<TextView
        		android:id="@+id/longitude_label"
        		android:paddingRight="3dip"
        		android:text="@string/longitude_label"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content" />
    		<TextView
        		android:id="@+id/longitude_text"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content" />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/locality_label"
                android:text="@string/locality_label"
                android:paddingRight="3dip"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/locality_text"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content" />
        </TableRow>
        
    </TableLayout>
    
	<com.google.android.maps.MapView
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:id="@+id/mapview"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:clickable="true"
	    android:apiKey="@string/map_api_key" />
></LinearLayout>